Subtext under title

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
     <div style="text-align: center;">
       <h1>RAMPAGE IDLE</h1>
+      <h6><em>by Tucker Godsey</em></h6>
       <p>Let's see how this works, eh?</p>
     </div>
 
